# meshae

./: .gitignore  README.md  embed_images.py  pyproject.toml  train.py
configs/default/: accelerate.yml  config.json  modeling.yml  train.yml
img2pc/: model.py
notebooks/: 0-data_fetch.ipynb  0-dolphin_trick.ipynb  0-eda.ipynb  1-image_to_point_cloud.ipynb  1-img2pc.ipynb
notebooks/utils_tmp/: mesh.py
src/: dataloader.py  model.py  model_gatr.py  visualization.py
src/factok/: geometric.py  losses.py  model.py
src/meshae/: __init__.py  config.py  data.py  dataset.py  model.py  trainer.py  typing.py  utils.py
src/meshae/auto_encoder/: embedding.py
src/meshae/datasets/: base.py
src/meshpiece/utils/: mesh.py  plot.py
