[project]
name = "factok"
version = "0.1.0"
description = "Efficient mesh tokenization with face encoder."
authors = [
    {name = "guest400123064", email = "wangy49@alumni.upenn.edu"},
    {name = "M4D-SC1ENTIST", email = "xiatao.sun@yale.edu"}
]
license = {file = "LICENSE"}
readme = "README.md"
packages = [
    { include = "factok", from = "src" }
]
requires-python = ">=3.10"
dependencies = [
    "ezgatr @ file:///~/projects/ezgatr",
    "pytorch3d @ https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py310_cu121_pyt230/pytorch3d-0.7.6-cp310-cp310-linux_x86_64.whl",
    "trimesh (>=4.6.8,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
ezgatr = {develop = true}

[tool.poetry.group.dev.dependencies]
bpython = "^0.25"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
ipywidgets = "^8.1.6"
